	draw_put_text(), draw_text_justify(), draw_enhanced_text(). Fix baseline
	alignment of normal and enhanced text. Text position was moving in wrong
	direction for rotated enhanced text (fix replaces change dated 
	2011-02-11). Remove unused function GraphGetFontScaling(). Fix text
	positioning of enhanced text with oversampling.

	* term/win.trm (WIN_graphics): Update character and window size.

	* src/win/wgraph (WndGraphProc): Remove another Win16 relict.

2011-04-09  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm term/js/gnuplot_svg.js:  Draw all grid lines with
	attribute class="gridline". Add an icon to toggle on/off lines with this
	attribute.  Move both this icon and the mouse coordinate tracking box to
	the end of the output *.svg file so that they cannot be occluded by plot
	elements.

	* term/svg.trm (SVG_PathClose): Firefox 3.x fails to render purely
	vertical lines. This is particularly noticeable because all vertical
	grid lines are missing.  Work around this by adding 0.01 to the final
	x coordinate.

2011-04-08  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm: Adjust enhanced text placement, removing some kludges
	that appear not to be necessary with the current generation of browsers.

	* term/svg.trm term/js/gnuplot_svg.js:  Implement mouse tracking
	framework. 

2011-04-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.h term/svg.trm demo/html/webify_svg.pl demo/html/Makefile.svg
	demo/html/Makefile.svg:  Add bitmap image handling to the svg terminal
	using the same mechanism of external png files used by the canvas and 
	tikz terminals.

	* term/svg.trm(SVG_init): Konqueror (KDE 4.5) crashes if the xlink to
	gnuplot_svg.js fails to load.  Work around this by adding a test for the
	presence of gnuplot_svg before initializing.

2011-04-06  Bastian Maerkisch  <bmaerkisch@web.de>

	* term/win.trm, src/win/wgnuplib.h, src/win/wgraph.c: Use UINTs
	instead of DWORDs in struct GWOP.
	